# python-best-practices-cookiecutter

./: .envrc  cookiecutter.json
{{cookiecutter.repo_name}}/: .bumpversion.cfg  .gitignore  .run  Makefile  Pipfile  setup.cfg  tox.ini
{{cookiecutter.repo_name}}/.run/: Template Python tests.run.xml
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: __main__.py  environment.py  main.py
