[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[mypy]
files={{cookiecutter.repo_name}},test
ignore_missing_imports=true

[tool:pytest]
testpaths=test/

[metadata]
name = {{cookiecutter.repo_name}}
version = 0.0.1
description = "{{cookiecutter.package_short_description}}"
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = {{cookiecutter.user_name}}
author_email = {{cookiecutter.email}}
url = https://github.com/{{cookiecutter.user_name}}/{{cookiecutter.repo_name}}
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    typer
    pydantic
include_package_data = True
python_requires = >=3.9

[options.packages.find]
#where = snipsync  ; gotcha: was not importable as snipsync

[options.package_data]
#sse_starlette = "py.typed"

[options.entry_points]
console_scripts =
    {{cookiecutter.repo_name}} = {{cookiecutter.repo_name}}.main:app
